--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,12 @@
 <h1>MENU DO SITE</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>TESTE DE HOMOLOGACAO</h2>
+</body>
+</html>
